Testing Google Analytics

--- a/_config.yml
+++ b/_config.yml
@@ -1,2 +1,4 @@
 theme: jekyll-theme-midnight
-title: "Fontora Test"
+title: "fontora.dev"
+description: "Play area for now"
+google_analytics: UA-175213666-1
