--- a/_config.yml
+++ b/_config.yml
@@ -3,6 +3,6 @@ title: "fontora.dev"
 description: "Play area for now"
 google_analytics: UA-175213666-1
 show_downloads: false
-
+url: "https://fontora.dev"
 plugins:
   - jekyll-sitemap
