--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 theme: jekyll-theme-midnight
-title: "fontora.dev"
-description: "Play area for now"
+title: "Fontora's Dev Area"
+description: "Fiddling with things I don't understand"
 google_analytics: UA-175213666-1
 show_downloads: false
 url: "https://fontora.dev"
