Tweak tweak tweak

--- a/_data/links_misc.yml
+++ b/_data/links_misc.yml
@@ -1,4 +1,6 @@
 - name: Simon Duff
   link: https://simonduff.net
+  info: Blog focused around Splunk
 - name: Matthew Duncan
   link: https://mahdtech.com
+  info: Home page for multiple projects
