--- a/_data/links_splunk_enterprise.yml
+++ b/_data/links_splunk_enterprise.yml
@@ -1,6 +1,11 @@
-- name: Splunk Enterprise (core.splunk.wiki)
+- name: Splunk Enterprise
   link: http://core.splunk.wiki
-- name: Universal Forwarder (uf.splunk.wiki)
+  info: core.splunk.wiki
+
+- name: Universal Forwarder
   link: http://uf.splunk.wiki
-- name: Cloud (cloud.splunk.wiki)
+  info: uf.splunk.wiki
+  
+- name: Cloud
   link: http://cloud.splunk.wiki
+  info: cloud.splunk.wiki
