--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Setup
 title: 'Splunk n Stuff'
-tagline: 'A Jekyll theme'
-description: 'Fiddling with data things!'
+tagline: 'Fontora\'
+description: 'Fiddling with data!'
 #show_downloads: false
 baseurl: ''
 paginate: 5
