--- a/_data/quotes_sunny.yml
+++ b/_data/quotes_sunny.yml
@@ -1,5 +1,5 @@
 - character: Charlie
-  quote: "Cat in the wall. Now you're talking my language."
+  quote: "Cat in the wall ... now you're talking my language."
 
 - character: Charlie
   quote: "There is a spider, deep in my soul ..."
@@ -11,13 +11,13 @@
   quote: "Do you think a pirate lives in there?"
 
 - character: Mac
-  quote: "I do backflips every single day of my life."
+  quote: "I do backflips every single day of my life!"
 
 - character: Mac
-  quote: "Science is a liar sometimes."
+  quote: "Science is a liar ... sometimes!"
 
 - character: Mac
-  quote: "I'm not fat. I'm cultivating mass."
+  quote: "I'm not fat, I'm cultivating mass!"
 
 - character: Dennis
   quote: "I've got the stride of a gazelle."
@@ -26,7 +26,7 @@
   quote: "And although I seem relaxed, I'm actually incredibly tense at all times."
 
 - character: Dennis
-  quote: "I haven't even begun to peak"
+  quote: "I haven't even begun to peak."
 
 - character: Frank
   quote: "Yippie-kay-yay, Mr. Falcon!"
