--- a/_data/quotes_sunny.yml
+++ b/_data/quotes_sunny.yml
@@ -8,13 +8,28 @@
   quote: "Are you taking me for a spaghetti day?"
 
 - character: Charlie
+  quote: "Wildcard, bitches! Yee-haw!"
+
+- character: Charlie
   quote: "Do you think a pirate lives in there?"
 
 - character: Mac
   quote: "I do backflips every single day of my life!"
 
 - character: Mac
+  quote: “Well, first of all, through god, all things are possible, so jot that down.”
+
+- character: Mac
   quote: "Science is a liar ... sometimes!"
+
+- character: Mac
+  quote: "It turns out I am - I am too muscular, and I can't fit through."
+
+- character: Mac
+  quote: "Science is a liar... sometimes!"
+
+- character: Mac
+  quote: "“I'm not fat. I'm cultivating mass."
 
 - character: Mac
   quote: "I'm not fat, I'm cultivating mass!"
@@ -27,6 +42,9 @@
 
 - character: Dennis
   quote: "I haven't even begun to peak."
+
+- character: Dennis
+  quote: "I am untethered and my rage knows no bounds!"
 
 - character: Frank
   quote: "Yippie-kay-yay, Mr. Falcon!"
